syntax = "proto3";
package qualia;

// import "google/api/annotations.proto";
// import "google/protobuf/field_mask.proto";


option go_package = "github.com/tachunwu/distributed/qualia/proto/qualia";

message Txn {
    uint64 txn_id = 1;

    // Use Lookup service before execute
    repeated KeyEntry read_set = 20;
    repeated KeyEntry write_set = 21;
    repeated KeyEntry read_write_set = 22;

    // Use Lookup service before execute
    repeated uint64 readers = 30;
    repeated uint64 writers = 31;

    enum Type {
        FREE = 0;
        BLOCKED = 1;
    };

    Type txn_type = 40; 
}

message KeyEntry {
    bytes  key = 1;
    uint32 master = 2;
    uint64 counter = 3;
}

message KeyValue {
    KeyEntry key_entry = 1;
    bytes value = 2;
}

message TxnResponse {
    repeated KeyValue rows = 1;
}

service QualiaService {
    rpc ReceiveNewTxn(Txn) returns (TxnResponse){}
}
